Bug de z-index dans la navigation

--- a/layout/main/main.css
+++ b/layout/main/main.css
@@ -11,6 +11,7 @@
     top: 0;
     right: 0;
     left: 0;
+    z-index: 10;
     transition: background-color .2s linear;
     background-color: rgba(1, 1, 1, .06);
 }
